Initial commit, basic window

--- a/Roids/Roids.vcxproj
+++ b/Roids/Roids.vcxproj
@@ -115,6 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="roids.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="roids.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
